Adição de funcinalidades

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <p><b>Estado:</b> <span id="estado"></span></p>
     </div>
 
-    <footer class="rodape">Rodape</footer>
+    <footer class="rodape">Email de Contato:joaodanielbernardin@gmail.com</footer>
+    <footer>©Copyright 2025 Buscador de CEPs</footer>
     <script src="script.js"></script>
   </body>
 </html>
