--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       <p><b>Cidade:</b> <span id="cidade"></span></p>
       <p><b>Estado:</b> <span id="estado"></span></p>
     </div>
-
+    <div id="cat">
+      <img src="Logo Ifce.png" alt="">
+    </div>
     <footer class="rodape">Email de Contato:joaodanielbernardin@gmail.com</footer>
-    <footer>©Copyright 2025 Buscador de CEPs</footer>
+    <footer>© 2025-2025 Busca Cep</footer>
     <script src="script.js"></script>
   </body>
 </html>
